--- a/app/views/articles/index.turbo_stream.haml
+++ b/app/views/articles/index.turbo_stream.haml
@@ -1,19 +1,27 @@
 = turbo_stream.remove("articles_card_skeleton") 
 = turbo_stream.append("articles_list") do
   %div{class: "grid grid-cols-2 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
-    - @articles.each do |article|
-      %a{id: dom_id(article), data: {turbo_frame: "_top"}, class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: article_path(article)}
-        %div{class: "row"}
+    - @articles.each_with_index do |article, index|
+      -# Flexbox для равномерного распределения высоты
+      %a{id: dom_id(article), data: {turbo_frame: "_top"}, class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300 flex flex-col h-full", href: article_path(article)}
+        -# Позволяет изображению занимать оставшееся пространство
+        %div{class: "flex-grow"}
           - if article.image.attached?
             = image_tag(article.image.variant(convert: "avif", resize_to_limit: [250, 125]), class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: article.title, loading: 'lazy')
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: article.title, loading: 'lazy')
-          %div{class: "px-4 py-2 h-auto md:h-64 lg:h-48 xl:h-40"}
-            %p{class: "font-messiry text-xs text-end"}
-              = article.created_at_field
-            %div{class: "mb-8"}
-              %h2{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
-                = article.title
+        %div{class: "px-4 py-2 h-auto md:h-64 lg:h-48 xl:h-40"}
+          %p{class: "font-messiry text-xs text-end"}
+            = article.created_at_field
+          %div{class: "mb-8"}
+            %h2{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              = article.title
+
+      - if (index + 1) % 9 == 0
+        %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
+        %ins.adsbygoogle{"data-ad-client" => "ca-pub-3829218691602401", "data-ad-format" => "fluid", "data-ad-layout-key" => "-6i+cd-2-3r+ld", "data-ad-slot" => "3777827084", :style => "display:block"}
+        :javascript
+          (adsbygoogle = window.adsbygoogle || []).push({});
               
 = turbo_stream.update "articles_pagination" do
   %div{class: "flex mt-12 items-center justify-center space-x-4 w-full"}
