--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -57,7 +57,7 @@
         %div{class: "px-4 py-2 h-auto"}
           %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
             = service.title
-          %p{class: "text-gray-700 text-sm text-ellipsis text-justify"}
+          %p{class: "font-messiri text-gray-700 text-sm text-ellipsis text-justify"}
             = service.description
 
       - if (index + 1) % 5 == 0
@@ -82,7 +82,7 @@
         %div{class: "px-4 py-2 h-auto"}
           %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
             = service.title
-          %p{class: "text-gray-700 text-sm text-ellipsis text-justify"}
+          %p{class: "font-messiri text-gray-700 text-sm text-ellipsis text-justify"}
             = service.description
 
       - if (index + 1) % 5 == 0
