--- a/app/views/articles/index.turbo_stream.haml
+++ b/app/views/articles/index.turbo_stream.haml
@@ -2,7 +2,6 @@
 = turbo_stream.append("articles_list") do
   %div{class: "grid grid-cols-2 md:grid-cols-2 sm:grid-cols-2 xl:grid-cols-3 lg:grid-cols-4 gap-10"}
     - @articles.each_with_index do |article, index|
-      -# Flexbox для равномерного распределения высоты
       %a{id: dom_id(article), data: {turbo_frame: "_top"}, class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300 flex flex-col h-full", href: article_path(article)}
         -# Позволяет изображению занимать оставшееся пространство
         %div{class: "flex-grow"}
@@ -10,12 +9,15 @@
             = image_tag(article.image.variant(convert: "avif", resize_to_limit: [250, 125]), class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: article.title, loading: 'lazy')
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: article.title, loading: 'lazy')
-        %div{class: "px-4 py-2 h-auto md:h-64 lg:h-48 xl:h-40"}
+        -# Убираем фиксированные высоты
+        %div{class: "px-4 py-2 flex-grow md:h-64 lg:h-48 xl:h-40"}
           %p{class: "font-messiry text-xs text-end"}
             = article.created_at_field
-          %div{class: "mb-8"}
+          %div{class: "mb-2"}
             %h2{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
               = article.title
+            %p{class: "font-messiri text-gray-700 text-sm text-ellipsis text-justify"}
+              = article.description
 
       - if (index + 1) % 9 == 0
         %script{:async => "", :crossorigin => "anonymous", :src => "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401"}
