--- a/app/views/articles/index.turbo_stream.haml
+++ b/app/views/articles/index.turbo_stream.haml
@@ -3,7 +3,7 @@
   %div{class: "grid grid-cols-2 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10"}
     - @articles.each_with_index do |article, index|
       -# Flexbox для равномерного распределения высоты
-      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300 flex flex-col h-full", href: article_path(article)}
+      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300 flex flex-col h-full", href: article_path(article), "data-turbo": "false",}
         -# Позволяет изображению занимать оставшееся пространство
         %div{class: "flex-grow"}
           - if article.image.attached?
