--- a/app/views/shared/_2_services.html.haml
+++ b/app/views/shared/_2_services.html.haml
@@ -1,4 +1,4 @@
-%section{class: "font-messiri relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
+%section{class: "font-messiri relative items-center w-full px-5 pt-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
   %div{class: "py-3 sm:py-6 text-center", "data-aos": "zoom-in"}
     %h2{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
       = t "landing.services.h2"
