--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,6 @@
     = csp_meta_tag
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload", nonce: true
     = stylesheet_link_tag "custom", "data-turbo-track": "reload", nonce: true
-    -#= stylesheet_link_tag "application", "https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap", "https://fonts.googleapis.com/css2?family=Bad+Script&family=messiri:wght@400..700&display=swap", "inter-font", "data-turbo-track": "reload", nonce: true
     = stylesheet_link_tag "fonts", "data-turbo-track": "reload", nonce: true
     = stylesheet_link_tag "aos", "data-turbo-track": "reload", nonce: true
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true, nonce: true
@@ -26,23 +25,25 @@
     -# Meta Pixel Code
     %meta{content: "c4iyqbhq6lzkda2zk3t9xgbnd162ag", name: "facebook-domain-verification"}
     :javascript
-      !function(f,b,e,v,n,t,s)
-      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '1562402937679169');
-      fbq('track', 'PageView');
+      document.addEventListener('DOMContentLoaded', function() {
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window, document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '1562402937679169');
+        fbq('track', 'PageView');
+      )};
     %noscript
       %img{height: "1", width: "1",
           src: "https://www.facebook.com/tr?id=1562402937679169&ev=PageView&noscript=1",
           style: "display:none"}
   
   %body{class: "bg-stone-100", id: "main"}
-    %navigation{class: ""}
+    = cache ['navigation', I18n.locale] do
       = render "shared/navigation"
     %main{class: "", "data-controller": "landing--index"}
       = yield
