--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -9,7 +9,7 @@
       = link_to "#{t ("footer")}", root_path, class: "px-2"
       = link_to "https://facebook.com/druzhba.biz.ua", target: "_blank", class: "text-blue-500 mx-1" do
         %i{class: "fa-brands fa-facebook"}
-      = link_to "https://www.instagram.com/pismenenkoborshchova", target: "_blank", class: "text-orange-500 mx-1" do
+      = link_to "https://www.instagram.com/druzhba.biz.ua", target: "_blank", class: "text-orange-500 mx-1" do
         %i{class: "fa-brands fa-instagram"}
     %div{class: "text-sm text-gray-600 flex justify-center my-auto"}
       %a{href: "mailto:admin@druzhba.biz.ua"} admin@druzhba.biz.ua
