--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,3 +54,6 @@
     -# Cookies bar
     %div{id: "cookies-bar","data-controller": "cookies"}
       = render "shared/cookies_bar" if @cookie_value.nil?
+
+    %link{rel: "stylesheet", href: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css", integrity: "sha512-EJp8vMVhYl7tBFE2rgNGb//drnr1+6XKMvTyamMS34YwOEFohhWkGq13tPWnK0FbjSS6D8YoA3n3bZmb3KiUYA==", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: true}
+    %script{src: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js", integrity: "sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw==", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: true}
