--- a/app/views/landing/faq.html.haml
+++ b/app/views/landing/faq.html.haml
@@ -135,7 +135,7 @@
           %div{class: "hidden sm:flex items-center justify-center p-3 ml-3 rounded-full bg-red-500 text-white border-4 border-white  font-semibold"}
             %i{class: "fa-regular fa-comment-dots"}
 
-  %p{class: "text-2xl text-center text-stone-700 sm:text-3xl leading-normal font-bold tracking-tight"}
+  %p{class: "text-xl text-center text-stone-700 sm:text-2xl leading-normal font-bold tracking-tight"}
     = t ("faq.p1")
     %button{onclick: "contactFormModal.classList.remove('hidden');", id: "openContactForm", href: "", class: "leading-8 text-red-500 hover:border-b-2 hover:border-red-500"}
       = t ("faq.p2")
