--- a/app/views/landing/prices.html.haml
+++ b/app/views/landing/prices.html.haml
@@ -48,45 +48,45 @@
                 = sewing.price
               = t ("prices.td_2")
   %div{id: "factors my-4", class: "text-justify"}
-    %p{class: "pt-4 text-xl text-stone-700 sm:text-2xl leading-normal font-semibold tracking-tight indent-8"}
+    %p{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
       = t ("prices.p1")
-    %p{class: "pt-4 text-2xl text-stone-700 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+    %p{class: "mb-3 font-bold text-xl text-stone-600 text-justify indent-8"}
       = t ("prices.p2")
     %ul{class: "list ms-4"}
       %li{class: ""}
-        %b{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+        %b{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.b_1")
-        %span{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-normal tracking-tight"}
+        %span{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.li_1")
       %li{class: ""}
-        %b{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+        %b{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.b_2")
-        %span{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-normal tracking-tight"}
+        %span{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.li_2")
       %li{class: ""}
-        %b{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+        %b{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.b_3")
-        %span{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-normal tracking-tight"}
+        %span{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.li_3")
       %li{class: ""}
-        %b{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+        %b{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.b_4")
-        %span{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-normal tracking-tight"}
+        %span{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.li_4")
       %li{class: ""}
-        %b{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+        %b{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.b_5")
-        %span{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-normal tracking-tight"}
+        %span{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.li_5")
       %li{class: ""}
-        %b{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+        %b{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.b_6")
-        %span{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-normal tracking-tight"}
+        %span{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.li_6")
       %li{class: ""}
-        %b{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+        %b{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.b_7")
-        %span{class: "text-xl text-stone-700 sm:text-2xl leading-normal font-normal tracking-tight"}
+        %span{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
           = t ("prices.ul.li_7")
     
     -# AdSense block media
@@ -96,7 +96,7 @@
     :javascript
       (adsbygoogle = window.adsbygoogle || []).push({});
     
-    %p{class: "pt-4 text-xl text-stone-700 sm:text-2xl leading-normal font-semibold tracking-tight indent-8"}
+    %p{class: "mb-3 text-xl text-stone-500 text-justify indent-8"}
       = t ("prices.p3")
-    %p{class: "pt-4 text-center text-stone-700 sm:text-2xl leading-normal font-extrabold tracking-tight"}
+    %p{class: "pt-4 text-center text-stone-600 sm:text-2xl leading-normal font-bold tracking-tight"}
       = t ("prices.p4")
