--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -34,7 +34,7 @@
     image: "#{service_url(@service) + rails_blob_path(@service.image, disposition: "attachment", only_path: true)}",
     availability_circle_origin: {latitude: "47.90306", longitude: "33.45735"},
     availability_circle_radius_unit: 'm',
-    availability_circle_radius: '20'
+    availability_circle_radius: '20',
     availability: 'https://schema.org/InStock',
     itemCondition: 'https://schema.org/NewCondition'
   });
