--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -2,6 +2,9 @@
 -#= content_for :description
 -#= content_for :locale
 
+- content_for :body do
+  :javascript
+    fbq('track', 'ViewContent');
 
 %section{class: "mt-8 font-messiri mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
@@ -24,6 +27,3 @@
   
   = turbo_frame_tag "articles_pagination"
   -#, data: { controller: "turbo-frame-history" }
-
-:javascript
-  fbq('track', 'ViewContent');
