--- a/app/views/shared/_2_services.html.haml
+++ b/app/views/shared/_2_services.html.haml
@@ -21,7 +21,7 @@
         %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", "data-aos": "zoom-in", href: service_path(repair)}
           %div{class: "row relative"}
             - if repair.image.attached?
-              = image_tag repair.image.variant(convert: "avif", resize_to_limit: [250, 125]), class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{repair.title}", loading: 'lazy'
+              = image_tag repair.image.variant(convert: "avif", resize_to_limit: [250, 125]), width: 600, height: 450, class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "#{repair.title}", loading: 'lazy'
             %div{class: "p-4 pt-2 h-auto md:h-64 lg:h-64 xl:h-64"}
               %div{class: "mb-8"}
                 %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
@@ -32,4 +32,3 @@
                   грн.
                 %p{class: "text-justify mx-auto text-base leading-relaxed text-stone-500"}
                   = repair.description
-                  
