--- a/app/views/shared/_5_about.html.haml
+++ b/app/views/shared/_5_about.html.haml
@@ -13,7 +13,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "mashine.svg", alt: "#{t ("landing.about.dl1.img")}", loading: 'lazy'
+                = image_tag "mashine.svg", height: "48px", width: "48px", alt: "#{t ("landing.about.dl1.img")}", loading: 'lazy'
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 = t ("landing.about.dl1.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -21,7 +21,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "button.svg", alt: "#{t ("landing.about.dl2.img")}", loading: 'lazy'
+                = image_tag "button.svg", height: "48px", width: "48px", alt: "#{t ("landing.about.dl2.img")}", loading: 'lazy'
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 = t ("landing.about.dl2.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -29,7 +29,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "model.svg", alt: "#{t ("landing.about.dl3.img")}", loading: 'lazy'
+                = image_tag "model.svg", height: "48px", width: "48px", alt: "#{t ("landing.about.dl3.img")}", loading: 'lazy'
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 = t ("landing.about.dl3.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -37,7 +37,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "pins.svg", alt: "#{t ("landing.about.dl4.img")}", loading: 'lazy'
+                = image_tag "pins.svg", height: "48px", width: "48px", alt: "#{t ("landing.about.dl4.img")}", loading: 'lazy'
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 = t ("landing.about.dl4.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
