--- a/app/views/shared/_1_hero_section.html.haml
+++ b/app/views/shared/_1_hero_section.html.haml
@@ -1,10 +1,14 @@
 %section{class: "py-3 sm:py-6 sm:mt-2 md:mt-4 lg:mt-6 xl:mt-8 mb-30 md:mb-24"}
   %div{class: "relative flex flex-col items-center mx-auto lg:flex-row-reverse lg:max-w-5xl lg:mt-8 xl:max-w-7xl"}
     %div{"data-aos": "flip-left", "data-aos-duration": "800", "data-aos-anchor": "main", "data-aos-anchor-placement": "top-center", class: "w-full transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
-      = image_set_tag("hero.jpg", 
-                       { "hero-1200x600.jpg" => "1200w", "hero-800x400.jpg" => "800w", "hero-600x300.jpg" => "600w" },
-                       class: "w-full h-[300px] md:h-[400px]", 
-                       alt: "#{t "landing.hero-1.img_alt"}")
+      = image_set_tag("hero.jpg",
+                 { "hero-1200x600.jpg" => "1200w", "hero-800x400.jpg" => "800w", "hero-600x300.jpg" => "600w" },
+                 class: "w-full h-auto md:h-[400px]",
+                 alt: "#{t "landing.hero-1.img_alt"}",
+                 width: 1200,
+                 height: 600,
+                 sizes: "(max-width: 600px) 100vw, 600px",
+                 loading: "lazy")
     %div{ "data-aos": "fade-up", "data-aos-duration": "1000", "data-aos-anchor": "main", "data-aos-anchor-placement": "top-center", class: "w-full bg-white md:max-w-2xl md:z-10 md:shadow-lg md:absolute md:top-0 md:mt-48 lg:left-0 lg:mt-32 lg:ml-20 xl:mt-40 xl:ml-12 lg:w-3/5"}
       %div{class: "flex flex-col p-12 md:px-16"}
         %h1{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
