--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -56,5 +56,5 @@
     %div{id: "cookies-bar","data-controller": "cookies"}
       = render "shared/cookies_bar" if @cookie_value.nil?
 
-    %link{rel: "stylesheet", href: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: content_security_policy_nonce}
+    %link{rel: "stylesheet", href: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/brands.min.css", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: content_security_policy_nonce}
     %script{src: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: content_security_policy_nonce}
