--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -4,10 +4,10 @@
       %span{class: "pr-1 self-center text-2xl font-bad_script font-bold whitespace-nowrap"}
         -# landing.navigation.top
         = t "landing.navigation.top"
-      = image_tag("scissors.svg", class: "h-4", alt: ">", loading: 'lazy')
+      = image_tag("scissors.svg", width: "16px", height: "16px", class: "h-4", alt: ">", loading: 'lazy')
       %div{class: "flex content-center"}
         %span{class: "pr-1 self-center text-2xl font-bad_script font-bold whitespace-nowrap"} ДРУЖБА
-      = image_tag("scissors.svg", class: "h-4 rotate-180", alt: "<", loading: 'lazy')
+      = image_tag("scissors.svg", width: "16px", height: "16px", class: "h-4 rotate-180", alt: "<", loading: 'lazy')
   %div{class: ""}
     = link_to "https://facebook.com/druzhba.biz.ua", target: "_blank", class: "text-blue-500 mx-1" do
       %i{class: "fa-brands fa-facebook"}
