--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -16,7 +16,7 @@
     %script{src: "https://cdn.jsdelivr.net/npm/@tabler/core@latest/dist/js/tabler.min.js"}
     %script{src: "https://cdn.jsdelivr.net/npm/flatpickr"}
 
-    %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"}
+    -#%script{src: "https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"}
     %script{src: "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"}
 
     = stylesheet_link_tag "admin", "data-turbo-track": "reload"
