--- a/app/views/shared/_1_hero_section.html.haml
+++ b/app/views/shared/_1_hero_section.html.haml
@@ -7,8 +7,7 @@
                  alt: "#{t "landing.hero-1.img_alt"}",
                  width: 1200,
                  height: 600,
-                 sizes: "(max-width: 600px) 100vw, 600px",
-                 loading: "lazy")
+                 sizes: "(max-width: 600px) 100vw, 600px")
     %div{ "data-aos": "fade-up", "data-aos-duration": "1000", "data-aos-anchor": "main", "data-aos-anchor-placement": "top-center", class: "w-full bg-white md:max-w-2xl md:z-10 md:shadow-lg md:absolute md:top-0 md:mt-48 lg:left-0 lg:mt-32 lg:ml-20 xl:mt-40 xl:ml-12 lg:w-3/5"}
       %div{class: "flex flex-col p-12 md:px-16"}
         %h1{class: "font-messiri text-red-500 text-2xl font-medium uppercase lg:text-3xl"}
