--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,9 +19,6 @@
     = stylesheet_link_tag "custom", media: "print", onload: "this.media='all'", "data-turbo-track": "reload", nonce: content_security_policy_nonce
     = stylesheet_link_tag "fonts", media: "print", onload: "this.media='all'", "data-turbo-track": "reload", nonce: content_security_policy_nonce
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true, nonce: content_security_policy_nonce
-    -# if @use_aos
-    -#= stylesheet_link_tag "aos", media: "print", onload: "this.media='all'", "data-turbo-track": "reload", nonce: content_security_policy_nonce
-    -#= javascript_include_tag "aos", "data-turbo-track": "reload", defer: true, nonce: content_security_policy_nonce
 
     %noscript
       %img{height: "1", width: "1",
@@ -57,7 +54,7 @@
       = render "shared/cookies_bar" if @cookie_value.nil?
 
     %link{rel: "stylesheet", href: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/brands.min.css", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: content_security_policy_nonce}
-    %script{src: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: content_security_policy_nonce}
+    %script{src: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js", defer: "defer", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: content_security_policy_nonce}
 
     %link{href: "https://unpkg.com/aos@next/dist/aos.css", rel: "stylesheet", nonce: content_security_policy_nonce}
-    %script{src: "https://unpkg.com/aos@next/dist/aos.js", nonce: content_security_policy_nonce}
+    %script{src: "https://unpkg.com/aos@next/dist/aos.js", defer: "defer", nonce: content_security_policy_nonce}
