--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -58,3 +58,5 @@
 
     %link{href: "https://unpkg.com/aos@next/dist/aos.css", rel: "stylesheet", nonce: content_security_policy_nonce}
     %script{src: "https://unpkg.com/aos@next/dist/aos.js", defer: "defer", nonce: content_security_policy_nonce}
+
+    = render "shared/google_ads"
