--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -53,10 +53,6 @@
     %div{id: "cookies-bar","data-controller": "cookies"}
       = render "shared/cookies_bar" if @cookie_value.nil?
 
-    %link{rel: "stylesheet", href: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/brands.min.css", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: content_security_policy_nonce}
-    %script{src: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js", defer: "defer", crossorigin: "anonymous", referrerpolicy: "no-referrer", nonce: content_security_policy_nonce}
-
-    %link{href: "https://unpkg.com/aos@next/dist/aos.css", rel: "stylesheet", nonce: content_security_policy_nonce}
-    %script{src: "https://unpkg.com/aos@next/dist/aos.js", defer: "defer", nonce: content_security_policy_nonce}
-
+    = render "shared/aos"
     = render "shared/google_ads"
+    = render "shared/font_awesome"
