--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,9 +15,9 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag "tailwind", "data-turbo-track": "reload", nonce: content_security_policy_nonce
-    = stylesheet_link_tag "custom", "data-turbo-track": "reload", nonce: content_security_policy_nonce
-    = stylesheet_link_tag "fonts", "data-turbo-track": "reload", nonce: content_security_policy_nonce
+    = stylesheet_link_tag "tailwind", rel: 'stylesheet', "data-turbo-track": "reload", nonce: content_security_policy_nonce
+    = stylesheet_link_tag "custom", rel: 'stylesheet', "data-turbo-track": "reload", nonce: content_security_policy_nonce
+    = stylesheet_link_tag "fonts", rel: 'stylesheet', "data-turbo-track": "reload", nonce: content_security_policy_nonce
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true, nonce: content_security_policy_nonce
 
     %noscript
