--- a/app/views/shared/_font_awesome.html.haml
+++ b/app/views/shared/_font_awesome.html.haml
@@ -15,7 +15,7 @@
     // Добавляем JavaScript для Font Awesome
     const script = document.createElement('script');
     script.src = 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js';
-    script.defer = true;
+    script.async = true;
     script.setAttribute('crossorigin', 'anonymous');
     script.setAttribute('referrerpolicy', 'no-referrer');
     script.setAttribute('nonce', nonceValue); // Устанавливаем nonce
