--- a/app/views/shared/_google_ads.html.haml
+++ b/app/views/shared/_google_ads.html.haml
@@ -1,7 +1,7 @@
 :javascript
   document.addEventListener('DOMContentLoaded', function() {
     const script = document.createElement('script');
-    script.defer = true;
+    script.async = true;
     script.crossOrigin = "anonymous";
     script.src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3829218691602401";
 
