--- a/app/views/shared/_1_hero_section.html.haml
+++ b/app/views/shared/_1_hero_section.html.haml
@@ -1,8 +1,8 @@
 %section{class: "py-3 sm:py-6 sm:mt-2 md:mt-4 lg:mt-6 xl:mt-8 mb-30 md:mb-24"}
   %div{class: "relative flex flex-col items-center mx-auto lg:flex-row-reverse lg:max-w-5xl lg:mt-8 xl:max-w-7xl"}
     %div{"data-aos": "flip-left", "data-aos-duration": "800", "data-aos-anchor": "main", "data-aos-anchor-placement": "top-center", class: "w-full transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
-      = image_set_tag("hero.jpg",
-                 { "hero-1200x600.jpg" => "1200w", "hero-800x400.jpg" => "800w", "hero-600x300.jpg" => "600w" },
+      = image_set_tag("hero.webp",
+                 { "hero-1200x600.webp" => "1200w", "hero-800x400.webp" => "800w", "hero-600x300.webp" => "600w" },
                  class: "w-full h-auto md:h-[400px]",
                  alt: "#{t "landing.hero-1.img_alt"}",
                  width: 1200,
