--- a/app/views/shared/_3_hero_section.html.haml
+++ b/app/views/shared/_3_hero_section.html.haml
@@ -5,8 +5,8 @@
 
   %div{class: "grid grid-cols-2 md:grid-cols-4 gap-4 place-content-center"}
     - (1..3).each do |i|
-      = image_tag("#{i}-min.jpg",
-                  srcset: {"#{i}-min.jpg" => "1200w", "#{i}-min.jpg" => "800w", "#{i}-min.jpg" => "600w"},
+      = image_tag("#{i}-min.webp",
+                  srcset: {"#{i}-min.webp" => "1200w", "#{i}-min.webp" => "800w", "#{i}-min.webp" => "600w"},
                   sizes: "(max-width: 600px) 100vw, 600px",
                   width: 1200,
                   height: 600,
